--- a/app/src/main/res/layout/layout_kungkungddagame.xml
+++ b/app/src/main/res/layout/layout_kungkungddagame.xml
@@ -126,17 +126,17 @@
                 app:layout_constraintGuide_percent="0.6" />
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/GameLogRecyclerView"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@null"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/LogGuideLine"
-                app:layout_constraintVertical_bias="1.0" />
+            android:id="@+id/GameLogRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#a3a1a199"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/LogGuideLine"
+            app:layout_constraintVertical_bias="1.0" />
 
 
         <androidx.constraintlayout.widget.Guideline
