게임중 나가기 처리

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,6 +38,9 @@
         <action
                 android:id="@+id/action_hunminGameFragment_to_hunminGameOverFragment"
                 app:destination="@+id/hunminGameOverFragment" />
+        <action
+                android:id="@+id/action_hunminGameFragment_to_mainFragment"
+                app:destination="@+id/mainFragment" />
         <argument
                 android:name="iLength"
                 app:argType="integer" />
