--- a/app/src/main/res/layout/item_hunmingame_room.xml
+++ b/app/src/main/res/layout/item_hunmingame_room.xml
@@ -34,5 +34,14 @@
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:textStyle="bold" />
+        <TextView
+                android:id="@+id/IsAnswerView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="차차차"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
